Updated README with OpenJDK information